--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .vscode/extensions/
+.vscode/User
+!.vscode/User/snippets/
+!.vscode/User/settings.json
+!.vscode/User/keybindings.json
 .vscode/*/workspaceStorage
