--- a/.vscode/User/settings.json
+++ b/.vscode/User/settings.json
@@ -1,11 +1,7 @@
 {
   "editor.fontSize": 14,
   "editor.tabSize": 2,
-  "editor.formatOnType": true,
-  "editor.rulers": [
-    80,
-    120
-  ],
+  "editor.rulers": [],
   "files.autoSave": "onFocusChange",
   "files.exclude": {
     "**/.git": true,
@@ -20,31 +16,102 @@
     "**/deps": true
   },
   "files.associations": {
-    "*.slime": "slim"
+    "*.slime": "slim",
   },
-  "workbench.activityBar.visible": false,
-  "window.zoomLevel": 0,
   "workbench.editor.showTabs": false,
-  "languageServerCredo.flags": "--strict",
-  "languageServerCredo.executablePath": "/usr/local/bin/mix",
   "workbench.editor.enablePreview": false,
   "workbench.editor.enablePreviewFromQuickOpen": false,
-  "typescript.check.tscVersion": false,
-  "editor.wordWrap": "on",
-  "workbench.statusBar.visible": false,
-  "editor.renderWhitespace": "all",
-  "workbench.iconTheme": "vscode-great-icons",
-  "diffEditor.ignoreTrimWhitespace": false,
-  "workbench.colorTheme": "Visual Studio Light",
-  "css.colorDecorators.enable": false,
+  "workbench.iconTheme": null,
+  "workbench.colorTheme": "Essentials",
   "typescript.check.npmIsInstalled": false,
   "editor.minimap.enabled": false,
-  "elixir.useElixirSense": false,
   "extensions.ignoreRecommendations": true,
   "terminal.integrated.scrollback": 100000,
-  "explorer.autoReveal": false,
-  "editor.fontFamily": "Fira Code",
+  "explorer.autoReveal": true,
+  "editor.fontFamily": "JetBrains Mono",
   "editor.fontLigatures": true,
-  "terminal.integrated.fontLigatures": true,
-  "terminal.integrated.fontSize": 14
+  "terminal.integrated.fontSize": 14,
+  "explorer.openEditors.visible": 0,
+  "workbench.startupEditor": "newUntitledFile",
+  "zenMode.fullScreen": false,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "css.validate": false,
+  "elixirLS.dialyzerEnabled": false,
+  "[elixir]": {
+    "editor.defaultFormatter": "JakeBecker.elixir-ls",
+    "editor.language.brackets": [
+      ["do", "end"],
+      ["%{", "}"],
+      ["{", "}"],
+      ["[", "]"],
+      ["(", ")"],
+    ]
+  },
+  "tslint.jsEnable": true,
+  "breadcrumbs.enabled": false,
+  "diffEditor.ignoreTrimWhitespace": false,
+  "workbench.sideBar.location": "right",
+  "workbench.statusBar.visible": false,
+  "editor.occurrencesHighlight": false,
+  "eslint.format.enable": true,
+  "eslint.packageManager": "yarn",
+  "eslint.validate": [
+    "typescript",
+    "typescriptreact"
+  ],
+  "eslint.codeActionsOnSave.mode": "all",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.markdownlint": true
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "emmet.triggerExpansionOnTab": true,
+  "emmet.showSuggestionsAsSnippets": true,
+  "elixirLS.suggestSpecs": false,
+  "git-graph.graph.style": "angular",
+  "git-graph.commitDetailsView.location": "Docked to Bottom",
+  "workbench.editorAssociations": {
+    "*.ex": "default"
+  },
+  "editor.lineNumbers": "off",
+  "[markdown]": {
+    "editor.wordWrap": "on",
+    "editor.quickSuggestions": false,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "markdownlint.run": "onSave",
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  // "window.title": "${rootName} ${separator} ${activeEditorMedium} ${dirty}",
+  "window.title": "${rootName}",
+  "editor.renderIndentGuides": false,
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
+  },
+  "workbench.activityBar.visible": false,
+  "editor.renderWhitespace": "all",
+  "indentRainbow.includedLanguages": ["slim", "slime", "json"],
+  "html-css-class-completion.HTMLLanguages": [
+    "html",
+    "slim",
+    "slime"
+  ],
+  "html-css-class-completion.enableEmmetSupport": true,
+  "terminal.explorerKind": "external",
+  "thunder-client.codeSnippetLanguage": "curl",
+  "elixir.credo.strictMode": true
 }
